Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
     <header id="header">
         <nav>
             <div class="logo-container">
-                <img src="/Aashutosh logo.jpg" alt="Adhikari Logo" class="logo-img">
+                <img src="Aashutosh logo.jpg" alt="Adhikari Logo" class="logo-img">
                 <div class="logo-text">Aashutosh Adhikari</div>
             </div>
             <ul class="nav-links">
@@ -578,7 +578,7 @@
             </div>
             <div class="about-image">
                 <!-- Replace with YOUR actual photo URL -->
-                <img src="/aa.jpg" 
+                <img src="aa.jpg" 
                      alt="Adhikari - Tech Enthusiast">
             </div>
         </div>
@@ -747,3 +747,4 @@
 
 </body>
 </html>
+
