--- a/index.html
+++ b/index.html
@@ -700,6 +700,10 @@
                 Contact:+977-9862113076
             </p>
         </div>
+        </div>
+
+    <a href="resume.pdf" download style="display:inline-block; margin-top:40px; padding:14px 36px; background:var(--primary); color:white; border-radius:50px; text-decoration:none; font-weight:600;">Download Resume</a>
+  </div>
     </section>
 
     <footer>
@@ -747,5 +751,6 @@
 
 </body>
 </html>
+
 
 
