--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
         </div>
         </div>
 
-    <a href="resume.pdf" download style="display:inline-block; margin-top:40px; padding:14px 36px; background:var(--primary); color:white; border-radius:50px; text-decoration:none; font-weight:600;">Download Resume</a>
+   <center><a href="resume.pdf" download style="display:inline-block; margin-top:40px; padding:14px 36px; background:var(--primary); color:white; border-radius:50px; text-decoration:none; font-weight:600;">Download Resume</a></center>
   </div>
     </section>
 
@@ -751,6 +751,7 @@
 
 </body>
 </html>
+
 
 
 
